force-app/main/default/objects/Territory_Name__c/Territory_Name__c.object-meta.xml
<CustomObject>
    <label>Territory Target Refinement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Target Refinements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>