force-app/main/default/objects/Territory_Name__c/fields/Foot_and_Ankle_Total_Refinement__c.field-meta.xml
<CustomField>
    <fullName>Foot_and_Ankle_Total_Refinement__c</fullName>
    <label>Foot and Ankle Total Refinement</label>
    <summarizedField>Target_Refinement__c.Refinement__c</summarizedField>
    <summaryFilterItems>
        <field>Target_Refinement__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Target_Refinement__c.Question_Type__c</field>
        <operation>equals</operation>
        <value>Target Changes</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Target_Refinement__c.Product_Group__c</field>
        <operation>equals</operation>
        <value>FOOT &amp; ANKLE</value>
    </summaryFilterItems>
    <summaryForeignKey>Target_Refinement__c.Territory_Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>