force-app/main/default/objects/Territory_Name__c/fields/Refinement_Total__c.field-meta.xml
<CustomField>
    <fullName>Refinement_Total__c</fullName>
    <label>Refinement Total</label>
    <summarizedField>Target_Refinement__c.Refinement__c</summarizedField>
    <summaryFilterItems>
        <field>Target_Refinement__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Target_Refinement__c.Territory_Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>