force-app/main/default/objects/Territory_Name__c/fields/RollUp_Target_Changes__c.field-meta.xml
<CustomField>
    <fullName>RollUp_Target_Changes__c</fullName>
    <label>RollUp Target Changes</label>
    <summaryFilterItems>
        <field>Target_Refinement__c.Question_Type__c</field>
        <operation>equals</operation>
        <value>Target Changes</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Target_Refinement__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Target_Refinement__c.Territory_Master__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>