force-app/main/default/objects/Territory_Name__c/fields/Round_1_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Round_1_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Round 1 Due Date</label>
    <type>Date</type>
</CustomField>