force-app/main/default/objects/Territory_Name__c/fields/Territory_Account__c.field-meta.xml
<CustomField>
    <fullName>Territory_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Territory</relationshipName>
    <type>Lookup</type>
</CustomField>