force-app/main/default/objects/Territory_Name__c/recordTypes/Ready_for_approval.recordType-meta.xml
<RecordType>
    <fullName>Ready_for_approval</fullName>
    <active>true</active>
    <label>Round 1</label>
</RecordType>