force-app/main/default/objects/Territory_Name__c/recordTypes/Submit_for_approval.recordType-meta.xml
<RecordType>
    <fullName>Submit_for_approval</fullName>
    <active>true</active>
    <label>Locked</label>
</RecordType>