force-app/main/default/objects/Territory_Name__c/recordTypes/Target_adjustment_Required.recordType-meta.xml
<RecordType>
    <fullName>Target_adjustment_Required</fullName>
    <active>true</active>
    <description>Target adjustment Required - Editable</description>
    <label>Round 2</label>
</RecordType>