force-app/main/default/objects/Territory_Name__c/validationRules/Biologics_Total_Refinement.validationRule-meta.xml
<ValidationRule>
    <fullName>Biologics_Total_Refinement</fullName>
    <active>true</active>
    <errorConditionFormula>Biologics_Total_Refinement__c &lt;&gt; 0</errorConditionFormula>
    <errorMessage>Total Refinement for Biologics should be Zero</errorMessage>
</ValidationRule>