force-app/main/default/objects/Territory_Name__c/validationRules/Cement_Total_Refinement.validationRule-meta.xml
<ValidationRule>
    <fullName>Cement_Total_Refinement</fullName>
    <active>true</active>
    <errorConditionFormula>Cement_Total_Refinement__c &lt;&gt; 0</errorConditionFormula>
    <errorMessage>Total Refinement for Cement should be Zero</errorMessage>
</ValidationRule>