force-app/main/default/objects/Territory_Name__c/validationRules/Extremities_Total_Refinement.validationRule-meta.xml
<ValidationRule>
    <fullName>Extremities_Total_Refinement</fullName>
    <active>true</active>
    <errorConditionFormula>Extremities_Total_Refinement__c &lt;&gt; 0</errorConditionFormula>
    <errorMessage>Total Refinement for Extremities should be Zero</errorMessage>
</ValidationRule>