force-app/main/default/objects/Territory_Name__c/validationRules/Foot_and_Ankle_Total_Refinement.validationRule-meta.xml
<ValidationRule>
    <fullName>Foot_and_Ankle_Total_Refinement</fullName>
    <active>true</active>
    <errorConditionFormula>Foot_and_Ankle_Total_Refinement__c &lt;&gt; 0</errorConditionFormula>
    <errorMessage>Total Refinement for Foot &amp; Ankle should be Zero</errorMessage>
</ValidationRule>