force-app/main/default/objects/Territory_Name__c/validationRules/Hips_Total_Refinement.validationRule-meta.xml
<ValidationRule>
    <fullName>Hips_Total_Refinement</fullName>
    <active>true</active>
    <errorConditionFormula>Hips_Total_Refinement__c &lt;&gt; 0</errorConditionFormula>
    <errorMessage>Total Refinement for Hips should be Zero</errorMessage>
</ValidationRule>