force-app/main/default/objects/Territory_Name__c/validationRules/Knees_Total_Refinement.validationRule-meta.xml
<ValidationRule>
    <fullName>Knees_Total_Refinement</fullName>
    <active>true</active>
    <errorConditionFormula>Knees_Total_Refinement__c &lt;&gt; 0</errorConditionFormula>
    <errorMessage>Total Refinement for Knees should be Zero</errorMessage>
</ValidationRule>