force-app/main/default/objects/Territory_Name__c/validationRules/Refinement_Total_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Refinement_Total_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Refinement_Total__c  &lt;&gt; 0</errorConditionFormula>
    <errorMessage>Total Refinement Should be Zero</errorMessage>
</ValidationRule>