force-app/main/default/objects/Territory_Name__c/validationRules/Sports_Medicine_Total_Refinement.validationRule-meta.xml
<ValidationRule>
    <fullName>Sports_Medicine_Total_Refinement</fullName>
    <active>true</active>
    <errorConditionFormula>Sports_Medicine_Total_Refinement__c &lt;&gt; 0</errorConditionFormula>
    <errorMessage>Total Refinement for Sports Medicine should be Zero</errorMessage>
</ValidationRule>