force-app/main/default/objects/Territory_Name__c/validationRules/Trauma_Total_Refinement.validationRule-meta.xml
<ValidationRule>
    <fullName>Trauma_Total_Refinement</fullName>
    <active>true</active>
    <errorConditionFormula>Trauma_Total_Refinement__c &lt;&gt; 0</errorConditionFormula>
    <errorMessage>Total Refinement for Trauma should be Zero</errorMessage>
</ValidationRule>