force-app/main/default/objects/Territory_Name__c/listViews/Select_Orthopedics_Inc_Territory_Name.listView-meta.xml
<ListView>
    <fullName>Select_Orthopedics_Inc_Territory_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>Select Orthopedics, Inc.</label>
    <queue>Select_Orthopedics_Inc</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>