force-app/main/default/objects/Territory_Name__c/listViews/Summit_Surgical_Territory_Name.listView-meta.xml
<ListView>
    <fullName>Summit_Surgical_Territory_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>Summit Surgical</label>
    <queue>Summit_Surgical</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>