force-app/main/default/objects/Territory_Name__c/listViews/ZB_Apex_Surgical1_Territory_Name.listView-meta.xml
<ListView>
    <fullName>ZB_Apex_Surgical1_Territory_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>ZB Apex Surgical</label>
    <queue>ZB_Apex_Surgical1</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>