force-app/main/default/objects/Territory_Name__c/listViews/ZB_Empire_Territory_Name.listView-meta.xml
<ListView>
    <fullName>ZB_Empire_Territory_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>ZB Empire</label>
    <queue>ZB_Empire</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>