force-app/main/default/objects/Territory_Name__c/listViews/Zimmer_Biomet_Colorado_Territory_Name.listView-meta.xml
<ListView>
    <fullName>Zimmer_Biomet_Colorado_Territory_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>Zimmer Biomet Colorado</label>
    <queue>Zimmer_Biomet_Colorado</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>