force-app/main/default/objects/Territory_Name__c/listViews/Zimmer_Biomet_Fegan_Inc_Territory_Name.listView-meta.xml
<ListView>
    <fullName>Zimmer_Biomet_Fegan_Inc_Territory_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>Premier Orthopedics, Inc.</label>
    <queue>Zimmer_Biomet_Fegan_Inc</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>