force-app/main/default/objects/Territory_Name__c/listViews/Zimmer_Biomet_Hibbard_Territory_Name.listView-meta.xml
<ListView>
    <fullName>Zimmer_Biomet_Hibbard_Territory_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>Zimmer Biomet Hibbard</label>
    <queue>Zimmer_Biomet_Hibbard</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>