force-app/main/default/objects/Territory_Name__c/listViews/Zimmer_Biomet_Mid_Ohio_Territory_Name.listView-meta.xml
<ListView>
    <fullName>Zimmer_Biomet_Mid_Ohio_Territory_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>Zimmer Biomet Mid-Ohio</label>
    <queue>Zimmer_Biomet_Mid_Ohio</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>