force-app/main/default/objects/Territory_Name__c/listViews/Zimmer_Biomet_Northeast_Territory_Name.listView-meta.xml
<ListView>
    <fullName>Zimmer_Biomet_Northeast_Territory_Name</fullName>
    <filterScope>Queue</filterScope>
    <label>ZB North Atlantic</label>
    <queue>Zimmer_Biomet_Northeast</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>